@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/qbzr
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/qbzr/ChangeLog,v 1.10 2010/07/27 21:08:35 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/qbzr/ChangeLog,v 1.11 2010/08/10 12:33:17 fauli Exp $
+
+*qbzr-0.19 (10 Aug 2010)
+
+  10 Aug 2010; Christian Faulhammer <fauli@gentoo.org> +qbzr-0.19.ebuild:
+  version bump
 
   27 Jul 2010; Christian Faulhammer <fauli@gentoo.org> -qbzr-0.18.5.ebuild:
   clean up
