@@ -1,6 +1,12 @@
 # ChangeLog for dev-vcs/bzr-svn
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/bzr-svn/ChangeLog,v 1.3 2010/07/27 21:06:46 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/bzr-svn/ChangeLog,v 1.4 2010/08/10 12:37:33 fauli Exp $
+
+*bzr-svn-1.0.3 (10 Aug 2010)
+
+  10 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
+  +bzr-svn-1.0.3.ebuild:
+  version bump
 
   27 Jul 2010; Christian Faulhammer <fauli@gentoo.org> bzr-svn-1.0.2.ebuild:
   fix bug 329467 by restricting Python ABIs to 2.*, Bazaar itself has no
